undoing certain test changes