@@ -40,8 +40,8 @@ public class ClassificationReferenceService {
   @Cacheable(cacheNames = "classificationTypeIds")
   public String getClassificationTypeIdByName(String name) {
     var classifications = classificationTypesClient.getByQuery(QUERY_PATTERN_NAME.formatted(name));
-    return classifications.getClassificationTypes().isEmpty()
-      ? name
-      : classifications.getClassificationTypes().get(0).getId();
+    return classifications.getClassificationTypes().isEmpty() ?
+      name :
+      classifications.getClassificationTypes().getFirst().getId();
   }
 }
